--- a/manifest.json
+++ b/manifest.json
@@ -55,6 +55,10 @@
             "en"
           ]
         }
+      },
+      "invoice": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "Invoices.json"
       }
     },
     "resources": {
