--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,15 @@
     "description": "{{appDescription}}",
     "applicationVersion": {
       "version": "1.0.0"
+    },
+    "dataSources": {
+      "invoiceRemote": {
+        "uri": "/destinations/northwind/V2/Northwind/Northwind.svc/Invoices",
+        "type": "OData",
+        "settings": {
+          "odataVersion": "2.0"
+        }
+      }
     }
   },
   "sap.ui": {
@@ -57,8 +66,7 @@
         }
       },
       "invoice": {
-        "type": "sap.ui.model.json.JSONModel",
-        "uri": "Invoices.json"
+        "dataSource": "invoiceRemote"
       }
     },
     "resources": {
