deploy: 8d15691b40d1653302f2cc6e3c46caa84ad2ec08

--- a/manifest.json
+++ b/manifest.json
@@ -79,34 +79,32 @@
     },
     "routing": {
       "config": {
-        "routerClass": "sap.m.Routing.Router",
+        "routerClass": "sap.m.routing.Router",
         "viewType": "XML",
         "viewPath": "sample-app.view",
         "controlId": "app",
         "controlAggregation": "pages"
-      }
-    },
-    "routes": [
-      {
-        "pattern": "",
-        "name": "overview",
-        "target": "overview"
       },
-      {
-        "pattern": "detail",
-        "name": "detail",
-        "target": "detail"
-      }
-    ],
-    "targets": [
-      {
+      "routes": [
+        {
+          "pattern": "",
+          "name": "overview",
+          "target": "overview"
+        },
+        {
+          "pattern": "detail/{invoicePath}",
+          "name": "detail",
+          "target": "detail"
+        }
+      ],
+      "targets": {
         "overview": {
-          "viewName": "overview"
+          "viewName": "Overview"
         },
         "detail": {
           "viewName": "Detail"
         }
       }
-    ]
+    }
   }
 }
